# practical_rust

./: .gitignore  LICENSE  flake.nix
catdex-api/: Cargo.toml
catdex-api/src/: main.rs  model.rs
catdex-api/static/: index.html
catdex-api/static/css/: index.css
catdex-yew/: Cargo.toml  index.html
catdex-yew/src/: index.css  main.rs
catsay/: Cargo.toml
catsay-gui/: Cargo.toml
catsay-gui-glade/: Cargo.toml  layout.glade
catsay-gui-glade/src/: main.rs
catsay-gui/src/: main.rs
catsay-tui/: Cargo.toml
catsay-tui/src/: main.rs
catsay/src/: main.rs
catsay/tests/: integration_test.rs
hello-wasm/: Cargo.toml
hello-wasm/client/: package-lock.json  package.json
hello-yew-world/: Cargo.toml
hello-yew-world/src/: main.rs
wasm-image-processing/: Cargo.toml  LICENSE_MIT
wasm-image-processing/src/: lib.rs
