[package]
name = "catsay"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A catsay cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
anyhow = "1.0.70"
assert_cmd = "2.0.10"
predicates = "3.0.2"
